fixed alignment of input

--- a/src/main.css
+++ b/src/main.css
@@ -4,9 +4,10 @@ body {
 
 input {
   font-size: 100%;
-  height: 28px;
+  height: 23px;
   font-family: Monaco;
   margin-left: 5px;
+  padding-bottom: 2px;
   padding-left: 5px;
 }
 
